[package]
name = "bili_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["multipart", "json"] }
tokio = {version = "1.36", features = ["full"]}
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

[profile.release]