[package]
name = "bili_ticket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = {version = "1.36", features = ["full"]}
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
eframe = { version = "0.26"}
#fast_qr = { version = "0.12", features = ["image"] }
egui_extras = { version = "0.26", features = ["image", "http"] }
image = { version = "0.24", features = ["png", "jpeg"] } # Add the types you want support for
bili_lib = { path = "../bili_lib" }


[profile.release]
lto = true
panic = 'abort'